--- a/admin/css/app.css
+++ b/admin/css/app.css
@@ -8,7 +8,7 @@
   --menu-item-active-bg: rgba(62, 121, 247, 0.1);
   --black: #000;
   --box-border-radius: 15px;
-  --sidebar-size: 300px;
+  --sidebar-size: 260px;
   --sidebar-logo-img-size: 45px;
   --sidebar-logo-size: 80px;
   --profile-image-size: 45px;
@@ -430,7 +430,7 @@ table td {
 table td {
   padding-left: 5px;
   text-align: center;
-  max-width: 200px;
+  max-width: 150px;
   text-align: center;
 }
 
@@ -449,26 +449,31 @@ table td {
   color: #00ab6f;
   background-color: rgba(4, 209, 130, 0.1);
 }
-
-.payment-status {
+.box-image img {
+  width: 150px;
+}
+.box-status {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.payment-status .dot {
+.box-status .dot {
   width: 10px;
   height: 10px;
   border-radius: 50%;
   margin-right: 10px;
 }
 
-.payment-paid .dot {
+.status-happening .dot {
   background-color: #04d182;
 }
 
-.payment-pending .dot {
+.status-upcoming .dot {
   background-color: #ffc542;
+}
+.status-happened .dot {
+  background-color: #ff4242;
 }
 
 .overflow-scroll {
@@ -573,8 +578,8 @@ table td {
   justify-content: center;
 }
 .teacher-box img {
-  width: 100px;
-  height: 100px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   object-fit: cover;
   object-position: center;
@@ -655,14 +660,14 @@ table td {
     visibility: hidden;
   }
 }
-#class-select {
+.class-select {
   display: flex;
   width: 100%;
   padding: 10px;
   border-radius: 5px;
   outline: none;
 }
-#class-select option {
+.class-select option {
   display: block;
   padding: 10px;
   border-radius: 5px;
